Updated the grid partial to fix column overflow issues, especially for automatic columns

--- a/src/partials/_grid.sass
+++ b/src/partials/_grid.sass
@@ -15,7 +15,7 @@
     margin-right: -$spacing
 
 .col, [class*='col-']
-    flex: 1 0 auto
+    flex: 1
     padding-left: $spacing
     padding-right: $spacing
 
